# 3dviewer

./: README.md
src/: Makefile
src/3DViewerBack/: object3d.cc  object3d.h  openglwidget.cc  openglwidget.h  recording.cc  recording.h  settings.cc  settings.h  strategy.cc  strategy.h  template.cc  template.h  view_parameters.cc  view_parameters.h
src/3DViewerBack/gif/: qopenglwindow.cc  qopenglwindow.h
src/3DViewerBack/gif/qtgifimage/: CMakeLists.txt
src/3DViewerBack/gif/qtgifimage/src/gifimage/doc/: main.cpp
src/3DViewerControl/: controller.cc  controller.h
src/3DViewerFront/: CMakeLists.txt  mainwindow.cc  mainwindow.h  mainwindow.ui
src/docs/: Doxyfile  main_page.md
src/docs/html/: annotated.html  annotated_dup.js  class_main_window.html  class_main_window.js  classes.html  classs21_1_1_g_l_background.html  classs21_1_1_g_l_background.js  classs21_1_1_g_l_lines.html  classs21_1_1_g_l_lines.js  classs21_1_1_g_l_object.html  classs21_1_1_g_l_object.js  classs21_1_1_g_l_points.html  classs21_1_1_g_l_points.js  classs21_1_1_object3_d.html  classs21_1_1_object3_d.js  classs21_1_1_open_g_l_widget.html  classs21_1_1_open_g_l_widget.js  classs21_1_1_orthographic_projection.html  classs21_1_1_orthographic_projection.js  classs21_1_1_perspective_projection.html  classs21_1_1_perspective_projection.js  classs21_1_1_projection_strategy.html  classs21_1_1_projection_strategy.js  classs21_1_1_recorder.html  classs21_1_1_recorder.js  classs21_1_1_settings.html  classs21_1_1_settings.js  classs21_1_1_view_parameters.html  classs21_1_1_view_parameters.js  classs21_1_1controller.html  classs21_1_1controller.js  controller_8h.html  controller_8h_source.html  dir_30a2d201ee7fa229a2fc3f0cea616c44.html  dir_30a2d201ee7fa229a2fc3f0cea616c44.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_b790ad83ec3f8f24f1614495f65aefe0.html  dir_b790ad83ec3f8f24f1614495f65aefe0.js  dir_dca4c18736df3beab88a15d765ec58c4.html  dir_dca4c18736df3beab88a15d765ec58c4.js  (+25 more)
src/docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
src/test/: CMakeLists.txt  check_calc.cc
src/test/materials/: example
